crates/module-system/sov-modules-macros/tests/integration/constants/create_gas_constant_invalid_dimension.stderr
error: The constant named `TEST_GAS_CONST_INCORRECT_DIM` inside `$WORKSPACE/constants.testing.toml` has 1 dimensions, but the number of gas dimensions is 2. The number of gas dimensions should be the same as the number of dimensions of the gas unit.
 --> tests/integration/constants/create_gas_constant_invalid_dimension.rs:4:51
  |
4 | pub const TEST_GAS: GasUnit<1> = config_gas_unit!("TEST_GAS_CONST_INCORRECT_DIM");
  |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
